--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -157,11 +157,15 @@ jobs:
     - name: run CPU tests
       run: |
         cd $env:GITHUB_WORKSPACE/build/tests-cpu
-        .\sycl_tests
+        $env:ACPP_DEBUG_LEVEL = 3
+        dir
+        dumpbin /dependents 
+        .\sycl_tests.exe
     - name: run SSCP CPU tests
       run: |
         cd $env:GITHUB_WORKSPACE/build/tests-sscp
-        .\sycl_tests
+        $env:ACPP_DEBUG_LEVEL = 3
+        .\sycl_tests.exe
     - uses: actions/upload-artifact@v4
       with:
         name: AdaptiveCpp-LLVM${{matrix.clang_version}}-Win
