--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -154,6 +154,12 @@ jobs:
           "$env:GITHUB_WORKSPACE/AdaptiveCpp/tests" `
           -DBoost_DIR="$env:GITHUB_WORKSPACE/install/lib/cmake/Boost-1.83.0"
         ninja -j2
+    - name: debug
+      shell: bash
+      run: |
+        cd $GITHUB_WORKSPACE/build/tests-cpu
+        ldd sycl_tests.exe
+        dependencies.exe -chain sycl_tests.exe -depth 2
     - name: run CPU tests
       run: |
         cd $env:GITHUB_WORKSPACE/build/tests-cpu
