--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -146,11 +146,6 @@ jobs:
           "$env:GITHUB_WORKSPACE/AdaptiveCpp/tests" `
           -DBoost_DIR="$env:GITHUB_WORKSPACE/install/lib/cmake/Boost-1.83.0"
         ninja -j2
-    - name: debug
-      shell: bash
-      run: |
-        cd $GITHUB_WORKSPACE/build/tests-cpu
-        ldd sycl_tests.exe
     - name: run CPU tests
       run: |
         cd $env:GITHUB_WORKSPACE/build/tests-cpu
@@ -168,6 +163,7 @@ jobs:
     - name: run SSCP CPU tests
       run: |
         cd $env:GITHUB_WORKSPACE/build/tests-sscp
+        $env:ACPP_DEBUG_LEVEL=3
         .\sycl_tests.exe
     - uses: actions/upload-artifact@v4
       with:
