--- a/.github/workflows/weekly-acpp-llvm.yml
+++ b/.github/workflows/weekly-acpp-llvm.yml
@@ -27,7 +27,7 @@ jobs:
         cuda: ['11.0']
         rocm_version: ['5.6.1']
         cuda_or_rocm: ['cuda', 'rocm']
-        os: ['ubuntu-20.04']
+        os: ['ubuntu-22.04']
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
@@ -77,7 +77,7 @@ jobs:
       run: |
         sudo apt install libnuma-dev unzip
         wget -q -O - https://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
-        echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/${{matrix.rocm_version}} focal main' | sudo tee /etc/apt/sources.list.d/rocm.list
+        echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/${{matrix.rocm_version}} jammy main' | sudo tee /etc/apt/sources.list.d/rocm.list
         sudo apt update
         sudo apt install rocm-dev
         echo "TARGETS_TO_BUILD=;AMDGPU" >> $GITHUB_ENV
